--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <script src="./classes/traveler.js"></script>
-    <script src="./classes/wagon.js"></script>
+    <script src="./classes/Traveler.js"></script>
+    <script src="./classes/Wagon.js"></script>
     <script src="./main.js"></script>
     <script src="./tests.js"></script>
 </body>
